css/home_style.css
@font-face {
    font-family: "Nunito";
    src: url("../fonts/static/Nunito-Regular.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: "Nunito";
    src: url("../fonts/static/Nunito-Bold.ttf") format("truetype");
    font-weight: bold;
    font-style: normal;
}
@font-face {
    font-family: "Nunito";
    src: url("../fonts/static/Nunito-Italic.ttf") format("truetype");
    font-weight: normal;
    font-style: italic;
}
@font-face {
    font-family: "Nunito";
    src: url("../fonts/static/Nunito-BoldItalic.ttf") format("truetype");
    font-weight: bold;
    font-style: italic;
}
@font-face {
    font-family: "Nunito";
    src: url("../fonts/static/Nunito-Black.ttf") format("truetype");
    font-weight: 900;
    font-style: normal;
}

@font-face {
    font-family: "Lato";
    src: url("../fonts/Lato-Regular.ttf") format("truetype");
    font-weight: 400;
    font-style: normal;
}


:root {
    /*colors*/
    color: #FFFFFF;
    font-size : 16px;
    --background-color: #101728;
    --blue: rgba(56, 62, 230, 0.58);
    --dark-blue:rgba(31, 37, 120, 1); 
    --magenta-pink: rgba(207, 62, 166, 1);
    --yellow-amber: rgba(255, 190, 11, 1);

}

/* RESET CSS */
h1, h2, h3, h4, h5, h6, ul, li, a, p {
    list-style-type: none;
    text-decoration: none;
    margin: 0;
    padding: 0;
    color: inherit;
}


* {
    box-sizing: border-box;
}

body {
    background-color: var(--background-color);
    font-family: "Nunito";
    margin: 0;
    /*for elipses not overflowing*/
    /* overflow: hidden; */
    overflow-x: hidden;
}


/*   Utilities  */

.container {
    max-width: min(80%,300px);  
    /* outline: 1px solid red; */
    margin: 0 auto;
    z-index: 10;
}

/*for tablets*/
@media screen and (min-width: 480px) {
    .container {
        max-width: 480px;
        /* outline: 2px solid yellow; */
        overflow: hidden;

    }
}
/*for desktop screens, max midth for large screen*/
@media screen and (min-width: 769px) {
    .container {
        /* width: min(80%,1280px); */
        max-width: 1280px;
        /* outline: 2px solid green; */
        overflow: hidden;

    }
}



/* Header */
.header {
    background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.12) 100%);
    backdrop-filter: blur(10px);
    position: sticky;
    top: 0; 
    z-index: 1000;
    width: 100vw;
}

.header__wrapper {
    padding: 0.75rem 0.5rem;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 1420px;
    
    /* z-index: 1000; */
}

.header__brand {
    display: flex;
    gap: 1rem;
    align-items: center;

}
.header__brand__img {
    width: 60px;
}

.header__brand__title {
    text-transform: uppercase;
    font-weight: 900;
    font-size: 1.4rem;
}

.header__nav__list {
    display: flex;
    gap: 1rem;
    font-size: 1rem;
}

.header__nav__itm {
    display: none;
}

@media only screen and (min-width: 769px) {
    .header__nav__itm {
        display: inherit; 
    }
}


/*  block section */

.block {
    margin-bottom: 2rem;
    display: flex;
    flex-direction: column;
}

@media screen and (min-width: 769px) {
    .block {
        /* margin-left: 2rem; */
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 2rem;
    }
}

.block__list {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

@media screen and (min-width: 769px) {
    .block__list {
        flex-direction: row;
        flex-wrap: wrap;

        gap: 3rem;
        /* align-items: center; */
        /* justify-content: center; */
    }
}


.block__title {
    text-transform: uppercase;
    position: relative;
}

.block__content {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

@media screen and (min-width: 769px) {
    .block__content {
        gap: 2rem;
    }
}

.block__item--title {
    font-size: 4.8rem;
    /* font-family: Lato; */
    margin-top: 1.8rem;
    margin-bottom: 1rem;
}

/*color of tiles*/

.block__item:nth-of-type(2) .tile {
    background-color: var(--magenta-pink);
}

.block__item:nth-of-type(3) .tile {
    background-color: var(--yellow-amber);
}



.tile {
    height: 100px;    /*revoir la taille en fonction du parent, pour avoir quelque chose en tablette*/
    width: 235px;
    overflow: hidden;
    background-color: var(--blue);
    border-radius: .75rem;
    display: flex;
    /* gap: 2rem; */
    /* align-items: center; */
    /* justify-content: space-around; */
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    transition: transform 0.3s;
    transform: translate3d(0 -1px 0);
    will-change: transform;
}

@media screen and (min-width: 769px) {
    .tile:hover {
        transition: transform 0.3s;
        transform: translate3d(0, -5px, 0);
        scale: 1.050;
        will-change: transform;
    }
}





/*Content of tiles*/

.tile__left {
    width: 50%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.tile__right {
    width: 50%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.4rem;
    background: rgba(0, 0, 0, 0.2);
}

.tile__right__img {
    width: 25px;
    aspect-ratio: 1/1;
}

.tile__right__content {
    display: flex;
    flex-direction: column;
    font-size: .75rem; 
}

.tile__label {
    font-size: 1.2rem;
    font-family: "Lato"; /*à vérifier*/
    text-align: center;
    text-align: left;
    padding-top: .5rem;
}

@media screen and (min-width: 729px) {
    .tile__left__img:hover {
        transition: transform 0.3s ease-in;
        transform: scale(1.5);
    }

    .tile__left__img:not(:hover) {
        transition: transform 0.3s ease-out;
        transform: scale(1);
    }
}



/*swiper*/
/*overflow issue -> https://stackoverflow.com/questions/42908632/display-element-outside-of-overflow-hidden-in-swiper-slider*/
.swiper {
    width: 100%;
    max-width: 1100px;
    /* height: 100px; */
    /* margin-bottom: 3rem; */
    margin-top: 1rem;
    /* overflow: visible; */
    /* overflow-y: inherit; */
    /* overflow-x: hidden; */
}

.swiper-wrapper {
    /* overflow-y: visible; */
    /* overflow-x: hidden; */
}

.swiper-slide {
    height: 100px;
    text-align: center;
    display: flex;
    /* gap:  */
    /*justify-content: center;
    align-items: center; */
    background-color: var(--blue);
    border-radius: .75rem;
    padding: 5rem;
    /* padding-top: 3rem; */
}



.swiper-theme-link {
    height: 100%;
    width: 100%;
    /* padding: 2rem; */
    display: flex;
    align-items: center;
    justify-content: center;
}

/*for dev puposes*/
.swiper-theme-link:hover {
    color: yellow;
}

@media screen and (min-width: 729px) {
    /* .swiper {

    } */


    .swiper-slide:hover {
        /* transition: transform 0.3s ease-in; */
        /* transform: translate3d(0, -5px, 0); */
        /* background-color: radial-gradient(circle,  rgba(4,1,69,1) 1%, var(--blue) 50%);  */
        background-color: var(--dark-blue); 
        /* font-size: 2rem; */
        transition: background-color .5s ease-out 100ms;
    }    
       
}

.swiper-button-prev, .swiper-button-next {
    color: white;
}



.elipse {
    position: absolute;
    width: 298px;
    height: 292px;
    top: -10px;
    left: -77px;
    z-index: -5;
    background: radial-gradient(50% 50% at 50% 50%, #260E69 0%, #FF3C5F 0%, #1F41BB 66.4%, rgba(38, 14, 105, 0.79) 90.79%);
    filter: blur(41.5px);
}


@media screen and (min-width: 720px) {
    .elipse {
        /* height: 500px; */
        /* width: 100%; */
        /* top: -50px;
        left: -77px;
        z-index: -5; */

        z-index: -5;
        position: absolute;
        overflow: hidden;
        width: 2855px;
        height: 2797px;
        left: 154px;
        top: -450px;

        background: radial-gradient(50% 50% at 50% 50%, #260E69 0%, #FF3C5F 0%, #1F41BB 66.4%, rgba(38, 14, 105, 0.79) 90.79%);
        filter: blur(75px);
    }

    
}
/*color elipsies*/
/* .elipse {
    position: absolute;
    width: 298px;
    height: 292px;
    left: -77px;
    top: 59px;
    
    background: radial-gradient(50% 50% at 50% 50%, #260E69 0%, #FF3C5F 0%, #1F41BB 66.4%, rgba(38, 14, 105, 0.79) 90.79%);
    filter: blur(41.5px);

} */

